--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Quiz</string>
+
+    <!-- Home Activity-->
+    <string name="high_score">HIGH SCORE</string>
+    <!-- Home Activity-->
+
+    <!-- Game Over Activity-->
+    <string name="game_over">GAME OVER</string>
+    <string name="your_score">YOUR SCORE</string>
+    <!-- Game Over Activity-->
 </resources>
