--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="game_over">GAME OVER</string>
     <string name="your_score">YOUR SCORE</string>
     <!-- Game Over Activity-->
+
+    <!-- Play Activity-->
+    <string name="logo_question">GUESS THE LOGO?</string>
+    <string name="logo_actor">GUESS THE ACTOR?</string>
+    <string name="logo_actress">GUESS THE ACTRESS?</string>
+    <!-- Play Activity-->
 </resources>
