--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="logo_question">GUESS THE LOGO?</string>
     <string name="logo_actor">GUESS THE ACTOR?</string>
     <string name="logo_actress">GUESS THE ACTRESS?</string>
-    <string name="congratulation">CONGRATULATION</string>
+    <string name="congratulation">CONGRATULATIONS</string>
 
     <string name="ad_unit">ca-app-pub-5957117184239951~8756468711</string>
     <string name="ad_unit_id_bottom">ca-app-pub-5957117184239951/1153310868</string>
